# mercury

./: .gitignore  README.md  __init__.py  class_calculation.py  class_data.py  main.py  pyproject.toml  setup.py  trader.py
connector/: binance.py  connector_binance.py
examples/01/: main.py
mercuryFramework/: __init__.py  class_calculation.py  mercury_exceptions.py  trader.py
mercuryFramework/connector/: connector_binance.py  main.py
mercuryFramework_base/mercuryFramework/connector/: __init__.py  connector_binance.py
tests/: __init__.py
tests/liveTests/: main.py  test_main.py
