[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mercuryFramework"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name="Anas Arkawi" }
]
description = "A simple quantitative finance package for algorithmic trading and financial analysis framework."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "binance-connector",
    "dataclasses",
    "hermesConnector"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
    "Development Status :: 4 - Beta"
]

[project.urls]
Homepage = "https://github.com/anasarkawi1/mercury"
Issues = "https://github.com/anasarkawi1/mercury/issues"